projects/compiler/test/typechecker/set/error_type_mismatch_item.3.out
Error at %FILE_NAME%:2:6
Type mismatch
  |  #{1, s}
          ^
Expected: Int
but instead found: String?
